--- a/dhananjay/DapperAPI/appsettings.json
+++ b/dhananjay/DapperAPI/appsettings.json
@@ -8,6 +8,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+
+    "ApiSettings": {
+        "ApiKey": "kallwikprojectKey"
+    },
+
     "Jwt": {
         "Key": "DapperTestModelAPIDhananjay2025!Secure&AuthToken",
         "Issuer": "DapperAPIapp",
