--- a/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/Dapper Api With Token Authentication.csproj
+++ b/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/Dapper Api With Token Authentication.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
