--- a/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
+++ b/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
@@ -13,8 +13,43 @@
 
   "Jwt": {
     "Key": "ThisIsAStrongJWTKeyForDapperApp@2025!",
-    "Issuer": "WithAuthentication",
-    "Audience": "WithAuthentication"
-  }
+    "Issuer": "Dapper Api With Token Authentication",
+    "Audience": "Dapper Api With Token Authentication"
+  },
 
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\c#\\Project Logs\\info-log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "restrictedToMinimumLevel": "Information",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\c#\\Project Logs\\error-log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "restrictedToMinimumLevel": "Error",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
