--- a/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
+++ b/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
@@ -33,7 +33,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "D:\\c#\\Project Logs\\info-log-.txt",
+          "path": "C:\\Users\\Vaishnavi Bajpai\\source\\repos\\APIProject\\Vaishnavi\\Dapper Api With Token Authentication\\Project Logsinfo-log-.txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "restrictedToMinimumLevel": "Information",
@@ -43,7 +43,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "D:\\c#\\Project Logs\\error-log-.txt",
+          "path": "C:\\Users\\Vaishnavi Bajpai\\source\\repos\\APIProject\\Vaishnavi\\Dapper Api With Token Authentication\\Project Logserror-log-.txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "restrictedToMinimumLevel": "Error",
