--- a/Priyansh/Dapper Token Api/appsettings.json
+++ b/Priyansh/Dapper Token Api/appsettings.json
@@ -11,9 +11,36 @@
     "Logging": {
         "LogLevel": {
             "Default": "Information",
+            "Error": "Error",
+            "Warning": "Warning",
             "Microsoft.AspNetCore": "Warning",
             "Microsoft.EntityFrameworkCore": "Warning"
         }
+    },
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "logs/app-.log",
+                    "rollingInterval": "Day",
+                    "retainedFileCountLimit": 30,
+                    "shared": true,
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
+            }
+        ]
     },
     "AllowedHosts": "*"
 }
