--- a/Shivam/assignment/pubspec.yaml
+++ b/Shivam/assignment/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   lottie: ^3.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
