--- a/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
+++ b/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
@@ -38,7 +38,13 @@
           "retainedFileCountLimit": 7,
           "restrictedToMinimumLevel": "Information",
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
+        },
+        "Filter": [
+          {
+            "Name": "ByExcluding",
+            "Args": { "expression": "@Level = 'Warning' or @Level = 'Error' or @Level = 'Fatal'" }
+          }
+        ]
       },
       {
         "Name": "File",
