--- a/Paras/DapperWebApiWIthAuthentication/DapperWebApiWIthAuthentication/DapperWebApiWIthAuthentication.csproj
+++ b/Paras/DapperWebApiWIthAuthentication/DapperWebApiWIthAuthentication/DapperWebApiWIthAuthentication.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
