--- a/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
+++ b/Vaishnavi/Dapper Api With Token Authentication/Dapper Api With Token Authentication/appsettings.json
@@ -17,6 +17,10 @@
     "Audience": "Dapper Api With Token Authentication"
   },
 
+  "AES": {
+    "Key": "MyStrongKey12345" 
+  },
+
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
