secure key and create log file

--- a/Paras/DapperWebApiWIthAuthentication/DapperWebApiWIthAuthentication/appsettings.json
+++ b/Paras/DapperWebApiWIthAuthentication/DapperWebApiWIthAuthentication/appsettings.json
@@ -3,6 +3,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=RDILIP-LP;Database=EmployeeDb;Trusted_Connection=True;"
   },
+  
+    "EncryptionSettings": {
+      "Key": "qwertyuiopasdfgh"
+    },
+  
+
 
   "Jwt": {
     "Key": "thisisaveryverysecurelongsecretkey@123",
