--- a/kashish/DapperAuthApi/DapperAuthApi/appsettings.json
+++ b/kashish/DapperAuthApi/DapperAuthApi/appsettings.json
@@ -5,7 +5,8 @@
   "Jwt": {
     "Key": "ThisIsMySuperSecureKey@123456789!",
     "Issuer": "DapperAuthApi",
-    "Audience": "DapperAuthApi"
+    "Audience": "DapperAuthApi",
+    "EncryptionKey": "YourSuperSecretKey123!"
   },
   "Logging": {
     "LogLevel": {
@@ -13,5 +14,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
 }
