--- a/Shivam/assignment/pubspec.yaml
+++ b/Shivam/assignment/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.18.0
   get: ^4.7.2
   http: ^1.4.0
+  syncfusion_flutter_pdfviewer: ^30.1.42
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
