--- a/Shivam/assignment/pubspec.yaml
+++ b/Shivam/assignment/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   lottie: ^3.0.0
-  intl: ^0.18.0
   get: ^4.7.2
   http: ^1.4.0
   syncfusion_flutter_pdfviewer: ^30.1.42
   photo_view: ^0.15.0
+  table_calendar: ^3.2.0
+  intl: ^0.20.2
+
 
 dev_dependencies:
   flutter_test:
